@@ -32,6 +32,7 @@
  - Handled redundant plugin installation 
 2022-05-04
  - Added super client id to install plugin table 
+ - Deprecated UserClientDto and uses ClientinfoDto instead
 
  
 # version 0.65.2
